--- a/service/src/main/resources/application-live.yml
+++ b/service/src/main/resources/application-live.yml
@@ -3,6 +3,5 @@
 # =================================
 spring:
   datasource:
-
-    url: jdbc:mysql://realmeet-db.cm4aga0zdanl.us-east-1.rds.amazonaws.com:3306/bluemeet?&serverTimezone=UTC&useSSL=false
+    url: jdbc:mysql://realmeet-db.coulsvioslbj.sa-east-1.rds.amazonaws.com:3306/realmeet?&serverTimezone=UTC&useSSL=false
     username: admin
