--- a/service/src/main/resources/application.yml
+++ b/service/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
     active: dev
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/bluemeet?createDatabaseIfNotExist=true&serverTimezone=UTC&useSSL=false&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://localhost:3306/realmeet?createDatabaseIfNotExist=true&serverTimezone=UTC&useSSL=false&allowPublicKeyRetrieval=true
     username: root
     password: root
     type: com.zaxxer.hikari.HikariDataSource
@@ -24,5 +24,5 @@ spring:
 # =================================
 logging:
   level:
-    org.springframework: ERROR
-    org.flywaydb: ERROR
+    org.springframework: INFO
+    org.flywaydb: INFO
