--- a/service/src/main/resources/application-live.yml
+++ b/service/src/main/resources/application-live.yml
@@ -5,3 +5,4 @@ spring:
   datasource:
     url: jdbc:mysql://realmeet-db.coulsvioslbj.sa-east-1.rds.amazonaws.com:3306/realmeet?&serverTimezone=UTC&useSSL=false
     username: admin
+    password: adminadmin
